assets/alertmanager/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-main
  labels:
    k8s-app: alertmanager
    alertmanager: main
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: alertmanager-main-tls
spec:
  type: ClusterIP
  selector:
    app: alertmanager
    alertmanager: main
  ports:
  - name: web
    port: 9093
    targetPort: web
    protocol: TCP
