assets/alertmanager/alertmanager-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: alertmanager-main
spec:
  to:
    kind: Service
    name: alertmanager-main
  port:
    targetPort: web
  tls:
    termination: Reencrypt
